tests/paczka1/small_fuzzy/86131198.err
Error in line 2: bopN3ZJmG A527 24,1
Error in line 6: bopN3ZJmG S647 11f,2
Error in line 4: bopN3ZJmG S647 39,8
